{
    "name": "CameraInputActions",
    "maps": [
        {
            "name": "CameraActions",
            "id": "3c303119-5589-4bd7-bb9a-a7908cdaf5ea",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "1aadc6ec-96de-458f-829a-6c227b9e5955",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "3b20a1ec-33a8-4db9-b2f8-621dadb53ae5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateKey",
                    "type": "Button",
                    "id": "7963de65-1352-4dbc-97be-1bf4f191ecf4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "09c3010d-e8ef-4985-97d2-ea7986e74415",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "93976f4b-1232-4e92-a288-06a9d2af39f2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fe5c9d97-2e57-4e65-9c08-b4d52bdf4c66",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a2748b3a-dfae-46ae-8590-50d1d8966812",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3130cfd0-6722-41ca-9076-4ac8c1d71d2d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a36230ee-bd9f-4128-996b-113aca6124d1",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1c3e4c31-5657-4632-bfeb-d147aba10a0a",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1e0f04a-2861-4e7f-afad-c9d0449b78a7",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "808acbb9-81ba-440d-806e-30dd11fcdc3b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}